# cmake_lib

./: .gitmodules  CMakeLists.txt  README.md
include/libmath/: c99defs.h  lib.h
lib/: CMakeLists.txt  lib.c  lib.cpp
tests/: CMakeLists.txt  test_common.cpp
